--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,7 @@ Temporary Items
 
 # Generated files
 .idea/**/contentModel.xml
+.idea/
 
 # Sensitive or high-churn files
 .idea/**/dataSources/
@@ -64,7 +65,7 @@ Temporary Items
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
 .idea/**/dbnavigator.xml
-
+.idea
 # Gradle
 .idea/**/gradle.xml
 .idea/**/libraries
